--- a/micro-services/spring-cloud-config-server/src/main/resources/application.properties
+++ b/micro-services/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
 spring.cloud.config.server.git.default-label=master
-spring.cloud.config.server.git.uri=C:/Users/oguzhan.karacorlu/DemoProjects/limits-service.properties
+spring.cloud.config.server.git.uri=https://github.com/OguzhanKaracorlu/micro-services.git
+spring.cloud.config.server.git.skip-ssl-validation = true
