--- a/micro-services/currency-exchange-service/src/main/resources/application.properties
+++ b/micro-services/currency-exchange-service/src/main/resources/application.properties
@@ -2,3 +2,14 @@ spring.application.name=currency-exchange
 server.port=8000
 spring.config.import=optional:configserver:http://localhost:8888
 
+# Details for our datasource
+spring.datasource.url = jdbc:postgresql://localhost:5432/currency
+spring.datasource.username = postgres
+spring.datasource.password = 1
+
+# Hibernate properties
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.show-sql = false
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.properties.hibernate.format_sql=true
