--- a/micro-services/currency-exchange-service/src/main/resources/application.properties
+++ b/micro-services/currency-exchange-service/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.properties.hibernate.format_sql=true
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
