--- a/micro-services/currency-exchange-service/src/main/resources/application.properties
+++ b/micro-services/currency-exchange-service/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.
 spring.jpa.properties.hibernate.format_sql=true
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+#spring.boot.admin.client.instance.management-base-url= http://localhost:8081
