--- a/micro-services/currency-exchange-service/src/main/resources/application.properties
+++ b/micro-services/currency-exchange-service/src/main/resources/application.properties
@@ -16,4 +16,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
-#spring.boot.admin.client.instance.management-base-url= http://localhost:8081
+
+resilience4j.retry.instances.sample-api.maxAttempts=5
+resilience4j.retry.instances.sample-api.waitDuration=1
+resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
+resilience4j.ratelimiter.instances.default.limitForPeriod=2
+resilience4j.ratelimiter.instances.default.limitRefreshPeriod=10s
+resilience4j.bulkhead.instances.defaultMaxConcurrentCalss=10
