--- a/micro-services/currency-exchange-service/src/main/resources/application.properties
+++ b/micro-services/currency-exchange-service/src/main/resources/application.properties
@@ -22,4 +22,8 @@ resilience4j.retry.instances.sample-api.waitDuration=1
 resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
 resilience4j.ratelimiter.instances.default.limitForPeriod=2
 resilience4j.ratelimiter.instances.default.limitRefreshPeriod=10s
-resilience4j.bulkhead.instances.defaultMaxConcurrentCalss=10
+#resilience4j.bulkhead.instances.defaultMaxConcurrentCalss=10
+
+
+spring.sleuth.sampler.probability=1.0
+#spring.zipkin.enabled=false
